5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1675_1951.log
== SUBMITION (2019-05-01 10:47:42) 
-- CODE:
x0 = float(input("Coordenada x do ponto p0: "))
x0 = float(input("Coordenada y do ponto p0: "))
x1 = float(input("Coordenada x do ponto p1: "))
y1 = float(input("Coordenada y do ponto p1: "))
x2 = float(input("Coordenada x do ponto p2: "))
y2 = float(input("Coordenada y do ponto p2: "))

c = (x - x0) * (y2 - y0) - (x2 - x0) * (y1 - y0)

if(c < 0):
	print("A direita da reta")
if(c > 0):
	print("A esquerda da reta")
if(c == 0):
	print("Sobre a reta")
-- EXECUTION TIME:
0.125744
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1675/1951/main.py", line 8, in <module>
    c = (x - x0) * (y2 - y0) - (x2 - x0) * (y1 - y0)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:48:50) 
-- CODE:
x0 = float(input("Coordenada x do ponto p0: "))
x0 = float(input("Coordenada y do ponto p0: "))
x1 = float(input("Coordenada x do ponto p1: "))
y1 = float(input("Coordenada y do ponto p1: "))
x2 = float(input("Coordenada x do ponto p2: "))
y2 = float(input("Coordenada y do ponto p2: "))

c = (x - x0) * (y2 - y0) - (x2 - x0) * (y1 - y0)

if(c < 0):
	print("A direita da reta")
if(c > 0):
	print("A esquerda da reta")
if(c == 0):
	print("Sobre a reta")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = (x - x0) * (y2 - y0) - (x2 - x0) * (y1 - y0)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 10:49:18) 
-- CODE:
x0 = float(input("Coordenada x do ponto p0: "))
x0 = float(input("Coordenada y do ponto p0: "))
x1 = float(input("Coordenada x do ponto p1: "))
y1 = float(input("Coordenada y do ponto p1: "))
x2 = float(input("Coordenada x do ponto p2: "))
y2 = float(input("Coordenada y do ponto p2: "))

c = (x1 - x0) * (y2 - y0) - (x2 - x0) * (y1 - y0)

if(c < 0):
	print("A direita da reta")
if(c > 0):
	print("A esquerda da reta")
if(c == 0):
	print("Sobre a reta")
-- EXECUTION TIME:
0.152438
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1675/1951/main.py", line 8, in <module>
    c = (x1 - x0) * (y2 - y0) - (x2 - x0) * (y1 - y0)
NameError: name 'y0' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:49:20) 
-- CODE:
x0 = float(input("Coordenada x do ponto p0: "))
x0 = float(input("Coordenada y do ponto p0: "))
x1 = float(input("Coordenada x do ponto p1: "))
y1 = float(input("Coordenada y do ponto p1: "))
x2 = float(input("Coordenada x do ponto p2: "))
y2 = float(input("Coordenada y do ponto p2: "))

c = (x1 - x0) * (y2 - y0) - (x2 - x0) * (y1 - y0)

if(c < 0):
	print("A direita da reta")
if(c > 0):
	print("A esquerda da reta")
if(c == 0):
	print("Sobre a reta")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = (x1 - x0) * (y2 - y0) - (x2 - x0) * (y1 - y0)
NameError: name 'y0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 10:49:42) 
-- CODE:
x0 = float(input("Coordenada x do ponto p0: "))
y0 = float(input("Coordenada y do ponto p0: "))
x1 = float(input("Coordenada x do ponto p1: "))
y1 = float(input("Coordenada y do ponto p1: "))
x2 = float(input("Coordenada x do ponto p2: "))
y2 = float(input("Coordenada y do ponto p2: "))

c = (x1 - x0) * (y2 - y0) - (x2 - x0) * (y1 - y0)

if(c < 0):
	print("A direita da reta")
if(c > 0):
	print("A esquerda da reta")
if(c == 0):
	print("Sobre a reta")
-- EXECUTION TIME:
0.130867
-- TEST CASE 1:
---- input:
1
4
3
5
9
9
---- correct output:
A esquerda da reta
---- user output:
A esquerda da reta
-- TEST CASE 2:
---- input:
9
8
6
5
2
1
---- correct output:
Sobre a reta
---- user output:
Sobre a reta
-- TEST CASE 3:
---- input:
0
0
0
1
1
1
---- correct output:
A direita da reta
---- user output:
A direita da reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
